--- a/project.html
+++ b/project.html
@@ -1,4 +1,3 @@
-
 <!doctype html>
 <html lang="ko">
 <head>
@@ -8,8 +7,18 @@
 <link rel="stylesheet" href="common.css"/>
 <link rel="stylesheet" href="app.min.css"/>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"/>
+<!-- SUIT Variable 폰트 -->
+<link href="https://cdn.jsdelivr.net/gh/sunn-us/SUIT/fonts/variable/woff2/SUIT-Variable.css" rel="stylesheet"/>
 <style>
-  body{background:#fafafa}
+  :root{
+    --ink:#111;
+    --sub:#555;
+    --accent:#E87722; /* 오렌지 포인트 */
+    --line:#eaeaea;
+    --bg:#fafafa;
+  }
+  body{margin:0;background:var(--bg);color:var(--ink);
+       font-family:'SUIT Variable','Pretendard','Inter',system-ui,sans-serif}
   .wrap{max-width:860px;margin:0 auto;padding:20px 16px}
 
   /* Hero */
@@ -21,34 +30,38 @@
     margin-bottom:24px;
   }
   .hero-card img{width:100%;height:280px;object-fit:cover}
-  .hero-body{padding:20px}
-  .hero-body h1{font-size:1.6rem;font-weight:900;margin:0 0 6px}
-  .hero-body .muted{color:#6b7280;margin-bottom:12px}
-  .progress{background:#e5e7eb;height:18px;border-radius:12px;overflow:hidden;margin:10px 0}
-  .progress .bar{height:100%;background:#A47864;color:#fff;text-align:center;font-size:.8rem;font-weight:600}
-  .stats{display:flex;justify-content:space-between;font-size:.95rem;color:#444;margin-top:6px}
+  .hero-body{padding:24px}
+  .hero-body h1{font-size:1.9rem;font-weight:900;margin:0 0 8px;color:var(--ink)}
+  .hero-body .muted{color:var(--sub);margin-bottom:12px;font-size:1rem}
+  .progress{background:#e5e7eb;height:18px;border-radius:12px;overflow:hidden;margin:14px 0}
+  .progress .bar{height:100%;background:var(--accent);color:#fff;
+                 text-align:center;font-size:.85rem;font-weight:600}
+  .stats{display:flex;justify-content:space-between;font-size:1rem;
+         color:var(--sub);margin-top:8px}
+  .stats span strong{font-size:1.1rem;font-weight:800;color:var(--ink);margin-left:4px}
   .hero-body .btn.primary{
-    display:block;margin-top:16px;text-align:center;padding:12px 16px;
-    background:#A47864;color:#fff;border-radius:12px;font-weight:700;font-size:1rem;
+    display:block;margin-top:18px;text-align:center;
+    padding:14px 18px;background:var(--accent);color:#fff;
+    border-radius:12px;font-weight:700;font-size:1.05rem;text-decoration:none;
   }
-  .hero-body .btn.primary:hover{background:#8b6452}
+  .hero-body .btn.primary:hover{background:#d56612}
 
   /* Section cards */
   .section-card{
     background:#fff;
     border-radius:16px;
-    padding:24px;
-    margin-top:20px;
+    padding:28px;
+    margin-top:22px;
     box-shadow:0 4px 10px rgba(0,0,0,0.05);
   }
-  .section-card h2{font-size:1.2rem;font-weight:800;margin-bottom:12px;color:#A47864}
-  .section-card p{font-size:1.05rem;line-height:1.7;color:#222}
+  .section-card h2{font-size:1.3rem;font-weight:800;margin-bottom:14px;color:var(--accent)}
+  .section-card p{font-size:1.05rem;line-height:1.7;color:var(--ink)}
 
   /* Info */
-  .info-card p{margin:6px 0;font-size:.95rem;color:#444}
+  .info-card p{margin:6px 0;font-size:1rem;color:var(--sub)}
 
   /* 공유 */
-  .share-buttons{display:flex;gap:12px;flex-wrap:wrap;margin-top:12px}
+  .share-buttons{display:flex;gap:12px;flex-wrap:wrap;margin-top:14px}
   .share-buttons button{
     flex:1;min-width:120px;
     display:flex;align-items:center;justify-content:center;
@@ -68,11 +81,11 @@
     filter:drop-shadow(0 6px 12px rgba(0,0,0,0.15));
   }
   .cta-dock a{
-    background:#A47864;color:#fff;
+    background:var(--accent);color:#fff;
     padding:12px 18px;border-radius:14px;
-    font-weight:700;font-size:.95rem;text-align:center;
+    font-weight:700;font-size:.95rem;text-align:center;text-decoration:none;
   }
-  .cta-dock a:hover{background:#8b6452}
+  .cta-dock a:hover{background:#d56612}
 </style>
 </head>
 <body>
@@ -97,71 +110,70 @@
 
     injectLayout({ active:'project' });
 
-    const $detail = document.getElementById('project-detail');
-    const $ctaDock = document.getElementById('ctaDock');
-    const $ctaBtn = document.getElementById('ctaBtn');
+    const $detail=document.getElementById('project-detail');
+    const $ctaDock=document.getElementById('ctaDock');
+    const $ctaBtn=document.getElementById('ctaBtn');
 
-    const fmt = n => Number(n||0).toLocaleString('ko-KR');
+    const fmt=n=>Number(n||0).toLocaleString('ko-KR');
 
     function candidatesOf(p){
-      const out = [];
-      const push = v => { if (typeof v === 'string' && v.trim()) out.push(v.trim()); };
+      const out=[];const push=v=>{if(typeof v==='string'&&v.trim())out.push(v.trim());};
       ['representativeImageUrl','coverUrl','mainImageUrl','thumbnailUrl','image','photo']
-        .forEach(k => push(p[k]));
-      ['galleryUrls','images','photos','files'].forEach(k => {
-        const arr = p[k]; if(Array.isArray(arr)) arr.forEach(it=>{
+        .forEach(k=>push(p[k]));
+      ['galleryUrls','images','photos','files'].forEach(k=>{
+        const arr=p[k];if(Array.isArray(arr))arr.forEach(it=>{
           if(typeof it==='string') push(it);
-          else if(it && (it.url||it.path)) push(it.url||it.path);
+          else if(it&&(it.url||it.path)) push(it.url||it.path);
         });
       });
       return out;
     }
 
     async function toHttpUrl(raw){
-      if (!raw) return null;
-      let v = String(raw).trim();
-      if (/^(https?:|data:|blob:)/i.test(v)) return v;
-      if (v.startsWith('/')) v = v.slice(1);
-      try { return await getDownloadURL(ref(storage, v)); }
-      catch { return null; }
+      if(!raw) return null;
+      let v=String(raw).trim();
+      if(/^(https?:|data:|blob:)/i.test(v)) return v;
+      if(v.startsWith('/')) v=v.slice(1);
+      try{return await getDownloadURL(ref(storage,v));}
+      catch{return null;}
     }
 
     async function galleryHttpUrls(p){
-      const cands = candidatesOf(p);
-      const urls = await Promise.all(cands.map(toHttpUrl));
-      const uniq = [], seen = new Set();
-      for(const u of urls){ if(u && !seen.has(u)){ seen.add(u); uniq.push(u); } }
-      return uniq.length ? uniq : ['img/placeholder.svg'];
+      const cands=candidatesOf(p);
+      const urls=await Promise.all(cands.map(toHttpUrl));
+      const uniq=[],seen=new Set();
+      for(const u of urls){if(u&&!seen.has(u)){seen.add(u);uniq.push(u);}}
+      return uniq.length?uniq:['img/placeholder.svg'];
     }
 
-    function getId(){ return new URLSearchParams(location.search).get("id"); }
+    function getId(){return new URLSearchParams(location.search).get("id");}
 
     async function render(){
-      const id = getId();
-      if(!id){ $detail.innerHTML='<div class="muted">잘못된 접근입니다.</div>'; return; }
+      const id=getId();
+      if(!id){$detail.innerHTML='<div class="muted">잘못된 접근입니다.</div>';return;}
 
       try{
-        const p = await getProjectById(id);
-        if(!p){ $detail.innerHTML='<div class="muted">존재하지 않는 프로젝트입니다.</div>'; return; }
+        const p=await getProjectById(id);
+        if(!p){$detail.innerHTML='<div class="muted">존재하지 않는 프로젝트입니다.</div>';return;}
 
-        const imgs = await galleryHttpUrls(p);
-        const goal = Number(p.goalAmount||0);
-        const current = 0; // 모금액 연동 전이라 0
-        const rate = goal ? Math.floor(current/goal*100) : 0;
+        const imgs=await galleryHttpUrls(p);
+        const goal=Number(p.goalAmount||0);
+        const current=0; // 모금액 연동 전
+        const rate=goal?Math.floor(current/goal*100):0;
 
-        $detail.innerHTML = `
+        $detail.innerHTML=`
           <!-- Hero -->
           <section class="hero-card">
             <img src="${imgs[0]}" alt="cover"/>
             <div class="hero-body">
-              <h1>${p.name ?? '(이름 없음)'}</h1>
-              <div class="muted">구조자: ${p.rescuerName ?? '익명'}</div>
+              <h1>${p.name??'(이름 없음)'}</h1>
+              <div class="muted">구조자: ${p.rescuerName??'익명'}</div>
               <div class="progress"><div class="bar" style="width:${rate}%">${rate}%</div></div>
               <div class="stats">
-                <span>목표 ${fmt(goal)}원</span>
-                <span>현재 ${fmt(current)}원</span>
+                <span>목표 <strong>${fmt(goal)}</strong>원</span>
+                <span>현재 <strong>${fmt(current)}</strong>원</span>
               </div>
-              ${p.registrantKakaoId ? `<a href="https://open.kakao.com/o/${p.registrantKakaoId}" target="_blank" class="btn primary">참여하기</a>` : ''}
+              ${p.registrantKakaoId?`<a href="https://open.kakao.com/o/${p.registrantKakaoId}" target="_blank" class="btn primary">참여하기</a>`:''}
             </div>
           </section>
 
@@ -190,14 +202,12 @@
           </section>
         `;
 
-        // 하단 CTA dock 연결
         if(p.registrantKakaoId){
           $ctaDock.style.display='flex';
           $ctaBtn.href=`https://open.kakao.com/o/${p.registrantKakaoId}`;
           $ctaBtn.textContent='참여하기';
         }
 
-        // 공유 버튼
         document.getElementById("shareCopy")?.addEventListener("click",()=>navigator.clipboard.writeText(window.location.href).then(()=>alert("링크 복사됨!")));
         document.getElementById("shareKakao")?.addEventListener("click",()=>window.open("https://sharer.kakao.com/talk/friends/picker/link","_blank"));
         document.getElementById("shareInsta")?.addEventListener("click",()=>alert("인스타그램은 직접 URL을 복사해 공유해주세요."));
