--- a/index.html
+++ b/index.html
@@ -117,21 +117,25 @@
 
       <!-- Card 2 -->
       <div class="story-card">
-        <div class="card-top"><span>PROJECT PAW</span><span class="dots">● ● ●</span></div>
-        <h2>"선함엔 기준이 필요해"</h2>
-        <ul>
-          <li>✓ 구조자가 30% 직접 부담 (책임 있는 구조 설계)</li>
-          <li>✓ 모금액은 전액 전달 (PG 연결 전까지 단톡방, 수수료는 PAW 부담)</li>
-          <li>✓ 치료 전·후 변화와 후기 공유</li>
-          <li>✓ 영수증 업로드 필수</li>
-        </ul>
-        <div class="hashtags">
-          <span>#유기동물치료비</span>
-          <span>#중성화수술</span>
-          <span>#입양직후검진/예방</span>
-          <span>#투명한구조활동</span>
-        </div>
-      </div>
+  <div class="card-top"><span>PROJECT PAW</span><span class="dots">● ● ●</span></div>
+  <h2>"선함엔 기준이 필요해"</h2>
+  <ul>
+    <li>✓ 구조자가 30% 직접 부담 (책임 있는 구조 설계)</li>
+    <li>✓ 모금액은 전액 전달 (PG 연결 전까지 단톡방, 수수료는 PAW 부담)</li>
+    <li>✓ 치료 전·후 변화와 후기 공유</li>
+    <li>✓ 영수증 업로드 필수</li>
+  </ul>
+  <div class="hashtags" style="font-size:1.2rem;line-height:1.8;">
+    <span style="color:var(--accent);font-weight:800">#유기동물치료비</span>
+    <span>#중성화수술</span>
+    <span>#입양직후검진/예방</span>
+    <span style="color:var(--accent);font-weight:800">#투명한구조활동</span>
+    <span>#응급치료지원</span>
+    <span>#사지말고입양하세요</span>
+    <span style="color:var(--accent);font-weight:800">#길냥이TNR</span>
+  </div>
+</div>
+
     </div>
   </section>
 
