--- a/create.html
+++ b/create.html
@@ -137,7 +137,10 @@
         <h2>4. 소통 정보</h2>
         <label>등록자 카카오톡 ID</label>
         <input name="registrantKakaoId" placeholder="예: g123abcd" required/>
-        <div class="note">후원자와 연결할 오픈채팅방 ID</div>
+        <div class="note">
+          관리자가 연락하기 위한 용도로만 사용됩니다. 전체에 공개되지 않으며,
+          <b>전화번호 입력도 가능합니다.</b>
+        </div>
       </div>
 
       <!-- 이미지 -->
