--- a/project.html
+++ b/project.html
@@ -7,13 +7,15 @@
 <link rel="stylesheet" href="common.css"/>
 <link rel="stylesheet" href="app.min.css"/>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"/>
-<!-- SUIT Variable 폰트 -->
 <link href="https://cdn.jsdelivr.net/gh/sunn-us/SUIT/fonts/variable/woff2/SUIT-Variable.css" rel="stylesheet"/>
+<!-- ✅ Bootstrap CSS -->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"/>
+
 <style>
   :root{
     --ink:#111;
     --sub:#555;
-    --accent:#E87722; /* 오렌지 포인트 */
+    --accent:#E87722;
     --line:#eaeaea;
     --bg:#fafafa;
   }
@@ -21,70 +23,41 @@
        font-family:'SUIT Variable','Pretendard','Inter',system-ui,sans-serif}
   .wrap{max-width:860px;margin:0 auto;padding:20px 16px}
 
-  /* Hero */
-  .hero-card{
-    background:#fff;
-    border-radius:20px;
-    overflow:hidden;
-    box-shadow:0 6px 14px rgba(0,0,0,0.08);
-    margin-bottom:24px;
-  }
-  .hero-card img{width:100%;height:280px;object-fit:cover}
+  .hero-card{background:#fff;border-radius:20px;overflow:hidden;
+             box-shadow:0 6px 14px rgba(0,0,0,0.08);margin-bottom:24px}
   .hero-body{padding:24px}
   .hero-body h1{font-size:1.9rem;font-weight:900;margin:0 0 8px;color:var(--ink)}
   .hero-body .muted{color:var(--sub);margin-bottom:12px;font-size:1rem}
   .progress{background:#e5e7eb;height:18px;border-radius:12px;overflow:hidden;margin:14px 0}
   .progress .bar{height:100%;background:var(--accent);color:#fff;
                  text-align:center;font-size:.85rem;font-weight:600}
-  .stats{display:flex;justify-content:space-between;font-size:1rem;
-         color:var(--sub);margin-top:8px}
+  .stats{display:flex;justify-content:space-between;font-size:1rem;color:var(--sub);margin-top:8px}
   .stats span strong{font-size:1.1rem;font-weight:800;color:var(--ink);margin-left:4px}
-  .hero-body .btn.primary{
-    display:block;margin-top:18px;text-align:center;
-    padding:14px 18px;background:var(--accent);color:#fff;
-    border-radius:12px;font-weight:700;font-size:1.05rem;text-decoration:none;
-  }
+  .hero-body .btn.primary{display:block;margin-top:18px;text-align:center;
+    padding:14px 18px;background:var(--accent);color:#fff;border-radius:12px;
+    font-weight:700;font-size:1.05rem;text-decoration:none}
   .hero-body .btn.primary:hover{background:#d56612}
 
-  /* Section cards */
-  .section-card{
-    background:#fff;
-    border-radius:16px;
-    padding:28px;
-    margin-top:22px;
-    box-shadow:0 4px 10px rgba(0,0,0,0.05);
-  }
+  .section-card{background:#fff;border-radius:16px;padding:28px;margin-top:22px;
+                box-shadow:0 4px 10px rgba(0,0,0,0.05)}
   .section-card h2{font-size:1.3rem;font-weight:800;margin-bottom:14px;color:var(--accent)}
   .section-card p{font-size:1.05rem;line-height:1.7;color:var(--ink)}
 
-  /* Info */
   .info-card p{margin:6px 0;font-size:1rem;color:var(--sub)}
 
-  /* 공유 */
   .share-buttons{display:flex;gap:12px;flex-wrap:wrap;margin-top:14px}
-  .share-buttons button{
-    flex:1;min-width:120px;
-    display:flex;align-items:center;justify-content:center;
-    gap:8px;padding:12px 18px;
-    border-radius:12px;font-weight:600;font-size:.95rem;
-    cursor:pointer;border:none;transition:.2s;
-  }
+  .share-buttons button{flex:1;min-width:120px;display:flex;align-items:center;justify-content:center;
+    gap:8px;padding:12px 18px;border-radius:12px;font-weight:600;font-size:.95rem;
+    cursor:pointer;border:none;transition:.2s}
   .share-buttons button:hover{transform:translateY(-2px)}
   .share-kakao{background:#FEE500;color:#111}
   .share-insta{background:#E4405F;color:#fff}
   .share-copy{background:#6b7280;color:#fff}
 
-  /* 하단 CTA dock */
-  .cta-dock{
-    position:fixed;bottom:16px;right:16px;z-index:50;
-    display:flex;flex-direction:column;gap:10px;
-    filter:drop-shadow(0 6px 12px rgba(0,0,0,0.15));
-  }
-  .cta-dock a{
-    background:var(--accent);color:#fff;
-    padding:12px 18px;border-radius:14px;
-    font-weight:700;font-size:.95rem;text-align:center;text-decoration:none;
-  }
+  .cta-dock{position:fixed;bottom:16px;right:16px;z-index:50;display:flex;flex-direction:column;gap:10px;
+    filter:drop-shadow(0 6px 12px rgba(0,0,0,0.15))}
+  .cta-dock a{background:var(--accent);color:#fff;padding:12px 18px;border-radius:14px;
+    font-weight:700;font-size:.95rem;text-align:center;text-decoration:none}
   .cta-dock a:hover{background:#d56612}
 </style>
 </head>
@@ -95,12 +68,14 @@
     <div id="project-detail"><div class="muted">불러오는 중...</div></div>
   </main>
 
-  <!-- CTA Dock -->
   <div class="cta-dock" id="ctaDock" style="display:none">
     <a id="ctaBtn" target="_blank">참여하기</a>
   </div>
 
   <div data-include="footer"></div>
+
+  <!-- ✅ Bootstrap JS -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
   <script type="module">
     import { injectLayout } from './js/include.js';
@@ -118,9 +93,8 @@
 
     function candidatesOf(p){
       const out=[];const push=v=>{if(typeof v==='string'&&v.trim())out.push(v.trim());};
-      ['representativeImageUrl','coverUrl','mainImageUrl','thumbnailUrl','image','photo']
-        .forEach(k=>push(p[k]));
-      ['galleryUrls','images','photos','files'].forEach(k=>{
+      ['representativeImageUrl','coverUrl','mainImageUrl','thumbnailUrl','image','photo'].forEach(k=>push(p[k]));
+      ['galleryUrls','images','photos','files','receiptUrls'].forEach(k=>{
         const arr=p[k];if(Array.isArray(arr))arr.forEach(it=>{
           if(typeof it==='string') push(it);
           else if(it&&(it.url||it.path)) push(it.url||it.path);
@@ -134,8 +108,7 @@
       let v=String(raw).trim();
       if(/^(https?:|data:|blob:)/i.test(v)) return v;
       if(v.startsWith('/')) v=v.slice(1);
-      try{return await getDownloadURL(ref(storage,v));}
-      catch{return null;}
+      try{return await getDownloadURL(ref(storage,v));}catch{return null;}
     }
 
     async function galleryHttpUrls(p){
@@ -158,13 +131,27 @@
 
         const imgs=await galleryHttpUrls(p);
         const goal=Number(p.goalAmount||0);
-        const current=0; // 모금액 연동 전
+        const current=0;
         const rate=goal?Math.floor(current/goal*100):0;
 
         $detail.innerHTML=`
           <!-- Hero -->
           <section class="hero-card">
-            <img src="${imgs[0]}" alt="cover"/>
+            <div id="carouselProject" class="carousel slide" data-bs-ride="carousel">
+              <div class="carousel-inner">
+                ${imgs.map((url,i)=>`
+                  <div class="carousel-item ${i===0?'active':''}">
+                    <img src="${url}" class="d-block w-100" style="height:320px;object-fit:cover" alt="img${i}">
+                  </div>`).join('')}
+              </div>
+              <button class="carousel-control-prev" type="button" data-bs-target="#carouselProject" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon"></span>
+              </button>
+              <button class="carousel-control-next" type="button" data-bs-target="#carouselProject" data-bs-slide="next">
+                <span class="carousel-control-next-icon"></span>
+              </button>
+            </div>
+
             <div class="hero-body">
               <h1>${p.name??'(이름 없음)'}</h1>
               <div class="muted">구조자: ${p.rescuerName??'익명'}</div>
@@ -177,13 +164,11 @@
             </div>
           </section>
 
-          <!-- Story -->
           <section class="section-card">
             <h2>스토리</h2>
             <p>${(p.description||'').replace(/\n/g,'<br/>')}</p>
           </section>
 
-          <!-- Info -->
           <section class="section-card info-card">
             <h2>프로젝트 정보</h2>
             <p><strong>구조자 부담금:</strong> ${fmt(p.rescuerContribution)}원</p>
@@ -191,7 +176,6 @@
             <p><strong>승인 상태:</strong> ${p.adminApproved?'승인됨':'대기중'}</p>
           </section>
 
-          <!-- 공유 -->
           <section class="section-card">
             <h2>공유하기</h2>
             <div class="share-buttons">
@@ -216,7 +200,6 @@
         $detail.innerHTML='<div class="muted">프로젝트를 불러오지 못했습니다.</div>';
       }
     }
-
     render();
   </script>
 </body>
