--- a/project.html
+++ b/project.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1"/>
 <title>프로젝트 상세</title>
 <link rel="stylesheet" href="common.css"/>
-<link rel="stylesheet" href="app.min.css"/>
+<link rel="stylesheet" href="app.css"/>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"/>
 <link href="https://cdn.jsdelivr.net/gh/sunn-us/SUIT/fonts/variable/woff2/SUIT-Variable.css" rel="stylesheet"/>
 <!-- ✅ Bootstrap CSS -->
