--- a/project_list.html
+++ b/project_list.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <title>프로젝트 목록 - Project.PAW</title>
   <link rel="stylesheet" href="common.css"/>
-  <link rel="stylesheet" href="app.min.css"/>
+  <link rel="stylesheet" href="app.css"/>
   <!-- SUIT Variable 폰트 -->
   <link href="https://cdn.jsdelivr.net/gh/sunn-us/SUIT/fonts/variable/woff2/SUIT-Variable.css" rel="stylesheet"/>
   <style>
