--- a/about.html
+++ b/about.html
@@ -1,1 +1,57 @@
-<!doctype html><html><head><meta charset='utf-8'><meta name='viewport' content='width=device-width,initial-scale=1'><title>About</title><link rel='stylesheet' href='common.css'></head><body><div data-include='header'></div><main class='container' style='padding:24px 16px'><h1>About Project.PAW</h1></main><div data-include='footer'></div><script type='module'>import {injectLayout} from './js/include.js'; injectLayout();</script></body></html>
+<!doctype html>
+<html lang="ko">
+<head>
+  <meta charset="utf-8"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1"/>
+  <title>소개 - Project.PAW</title>
+  <link rel="stylesheet" href="css/app.css"/>
+</head>
+<body>
+  <!-- Header -->
+  <div data-include="header"></div>
+
+  <main class="container" style="padding:60px 0;font-family:'SUIT Variable','Pretendard',sans-serif;">
+    <!-- Hero -->
+    <section style="text-align:center;margin-bottom:60px;">
+      <h1 style="font-size:2.4rem;font-weight:800;margin-bottom:16px;color:#111;">
+        ⚡ 곧 연결됩니다
+      </h1>
+    </section>
+
+    <!-- 시작 -->
+    <section style="max-width:700px;margin:0 auto 60px;">
+      <h2 style="font-size:1.3rem;font-weight:700;margin-bottom:16px;color:#111;">시작</h2>
+      <p style="color:#555;line-height:1.7;font-size:1rem;margin:0;">
+        SNS에서 많은 구조 이야기를 보았습니다.<br>
+        용기 있게 구조했지만, 병원비 앞에서 막히는 현실도 함께 보았습니다.<br><br>
+        구조자의 책임감뿐 아니라,<br>
+        단톡방 곳곳에서 “도와주고 싶다”는 마음들도 있었습니다.<br><br>
+        그 마음들이 흩어지지 않고 이어진다면,<br>
+        망설임은 줄어들고 행동으로 바뀔 수 있을 거라 믿었습니다.
+      </p>
+    </section>
+
+    <!-- 본질 -->
+    <section style="max-width:700px;margin:0 auto 60px;">
+      <h2 style="font-size:1.3rem;font-weight:700;margin-bottom:16px;color:#111;">본질</h2>
+      <p style="color:#555;line-height:1.7;font-size:1rem;margin:0;">
+        Project.PAW는 대단한 답을 내놓지 않습니다.<br>
+        그저, 따뜻한 마음들이 모이고 이어지는 방식을 실험합니다.<br><br>
+        돈보다 마음이 먼저 움직이고,<br>
+        망설임이 행동으로 이어지는 순간,<br>
+        그게 제가 바라는 전부이자 철학이고,<br>
+        PAW의 본질입니다.
+      </p>
+    </section>
+  </main>
+
+  <!-- Footer -->
+  <div data-include="footer"></div>
+
+  <script type="module" src="js/include.js"></script>
+  <script type="module">
+    import { injectLayout } from "./js/include.js";
+    injectLayout();
+  </script>
+</body>
+</html>
